[UNOMI-852] - Improve robustness against log injection (#696)
See https://issues.apache.org/jira/browse/UNOMI-852